--- a/fuzzy.ipynb
+++ b/fuzzy.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "2  325  240  367  239  351  260  334  282  362  282  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,12 +199,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_u0(p,n):\n",
+    "def generate_u0(c,n):\n",
     "    u0= []\n",
-    "    for i in range(p):\n",
+    "    for i in range(c):\n",
     "        u0.append([])\n",
     "        for j in range(n):\n",
-    "            if i==j or i==j%p:\n",
+    "            if i==j or i==j%c:\n",
     "                u0[i].append(1)\n",
     "            else:\n",
     "                u0[i].append(0)\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "[[1, 0, 0, 1, 0], [0, 1, 0, 0, 1], [0, 0, 1, 0, 0]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,19 +234,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_vt(u, m=1.2):\n",
-    "    p=u.shape[0]\n",
-    "    n=u.shape[1]\n",
+    "def generate_vt(u, x, c, n,p,m=1.2):\n",
     "    v=[]\n",
-    "    for i in range(p):\n",
+    "    for i in range(c):\n",
     "        v.append([])\n",
-    "        for j in range(n):\n",
-    "            v_ij=sum(u[])"
+    "        for j in range(p):\n",
+    "            v_ij=sum((u[i][k]**m)*x[k][j] for k in range(n))/sum(u[i][k]**m for k in range(n))\n",
+    "            v[i].append(v_ij)\n",
+    "    return v"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2.1367204728859424, 2.152858300414527],\n",
+       " [1.0901470382421128, 2.5769297531858357]]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=[\n",
+    "    [0,2],\n",
+    "    [1,3],\n",
+    "    [4,2]\n",
+    "]\n",
+    "p=2\n",
+    "c=2\n",
+    "n=3\n",
+    "u0=generate_u0(p,n)\n",
+    "u0=[\n",
+    "    [0.6, 0.3, 0.8],\n",
+    "    [0.4,0.7,0.2]\n",
+    "]\n",
+    "generate_vt(u0,x,c,n,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
