--- a/fuzzy.ipynb
+++ b/fuzzy.ipynb
@@ -23,11 +23,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fileName</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>imgNum</th>\n",
+       "      <th>label</th>\n",
+       "      <th>ang</th>\n",
+       "      <th>xF</th>\n",
+       "      <th>yF</th>\n",
+       "      <th>wF</th>\n",
+       "      <th>hF</th>\n",
+       "      <th>xRE</th>\n",
+       "      <th>yRE</th>\n",
+       "      <th>xLE</th>\n",
+       "      <th>yLE</th>\n",
+       "      <th>xN</th>\n",
+       "      <th>yN</th>\n",
+       "      <th>xRM</th>\n",
+       "      <th>yRM</th>\n",
+       "      <th>xLM</th>\n",
+       "      <th>yLM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20130529_01_Driv_001_f</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>292</td>\n",
+       "      <td>209</td>\n",
+       "      <td>100</td>\n",
+       "      <td>112</td>\n",
+       "      <td>323</td>\n",
+       "      <td>232</td>\n",
+       "      <td>367</td>\n",
+       "      <td>231</td>\n",
+       "      <td>353</td>\n",
+       "      <td>254</td>\n",
+       "      <td>332</td>\n",
+       "      <td>278</td>\n",
+       "      <td>361</td>\n",
+       "      <td>278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20130529_01_Driv_002_f</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>286</td>\n",
+       "      <td>200</td>\n",
+       "      <td>109</td>\n",
+       "      <td>128</td>\n",
+       "      <td>324</td>\n",
+       "      <td>235</td>\n",
+       "      <td>366</td>\n",
+       "      <td>235</td>\n",
+       "      <td>353</td>\n",
+       "      <td>258</td>\n",
+       "      <td>333</td>\n",
+       "      <td>281</td>\n",
+       "      <td>361</td>\n",
+       "      <td>281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20130529_01_Driv_003_f</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>290</td>\n",
+       "      <td>204</td>\n",
+       "      <td>105</td>\n",
+       "      <td>121</td>\n",
+       "      <td>325</td>\n",
+       "      <td>240</td>\n",
+       "      <td>367</td>\n",
+       "      <td>239</td>\n",
+       "      <td>351</td>\n",
+       "      <td>260</td>\n",
+       "      <td>334</td>\n",
+       "      <td>282</td>\n",
+       "      <td>362</td>\n",
+       "      <td>282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20130529_01_Driv_004_f</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>287</td>\n",
+       "      <td>202</td>\n",
+       "      <td>112</td>\n",
+       "      <td>118</td>\n",
+       "      <td>325</td>\n",
+       "      <td>230</td>\n",
+       "      <td>369</td>\n",
+       "      <td>230</td>\n",
+       "      <td>353</td>\n",
+       "      <td>253</td>\n",
+       "      <td>335</td>\n",
+       "      <td>274</td>\n",
+       "      <td>362</td>\n",
+       "      <td>275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20130529_01_Driv_005_f</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>290</td>\n",
+       "      <td>193</td>\n",
+       "      <td>104</td>\n",
+       "      <td>119</td>\n",
+       "      <td>325</td>\n",
+       "      <td>224</td>\n",
+       "      <td>366</td>\n",
+       "      <td>225</td>\n",
+       "      <td>353</td>\n",
+       "      <td>244</td>\n",
+       "      <td>333</td>\n",
+       "      <td>268</td>\n",
+       "      <td>363</td>\n",
+       "      <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>601</th>\n",
+       "      <td>20130530_04_Driv_086_f</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-15</td>\n",
+       "      <td>278</td>\n",
+       "      <td>183</td>\n",
+       "      <td>128</td>\n",
+       "      <td>141</td>\n",
+       "      <td>307</td>\n",
+       "      <td>218</td>\n",
+       "      <td>354</td>\n",
+       "      <td>210</td>\n",
+       "      <td>330</td>\n",
+       "      <td>247</td>\n",
+       "      <td>324</td>\n",
+       "      <td>273</td>\n",
+       "      <td>356</td>\n",
+       "      <td>266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602</th>\n",
+       "      <td>20130530_04_Driv_087_lr</td>\n",
+       "      <td>4</td>\n",
+       "      <td>87</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-30</td>\n",
+       "      <td>268</td>\n",
+       "      <td>186</td>\n",
+       "      <td>128</td>\n",
+       "      <td>134</td>\n",
+       "      <td>296</td>\n",
+       "      <td>222</td>\n",
+       "      <td>344</td>\n",
+       "      <td>212</td>\n",
+       "      <td>319</td>\n",
+       "      <td>247</td>\n",
+       "      <td>316</td>\n",
+       "      <td>274</td>\n",
+       "      <td>347</td>\n",
+       "      <td>269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603</th>\n",
+       "      <td>20130530_04_Driv_088_lr</td>\n",
+       "      <td>4</td>\n",
+       "      <td>88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-30</td>\n",
+       "      <td>264</td>\n",
+       "      <td>187</td>\n",
+       "      <td>127</td>\n",
+       "      <td>131</td>\n",
+       "      <td>287</td>\n",
+       "      <td>220</td>\n",
+       "      <td>334</td>\n",
+       "      <td>211</td>\n",
+       "      <td>304</td>\n",
+       "      <td>247</td>\n",
+       "      <td>305</td>\n",
+       "      <td>272</td>\n",
+       "      <td>337</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>20130530_04_Driv_089_f</td>\n",
+       "      <td>4</td>\n",
+       "      <td>89</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-15</td>\n",
+       "      <td>264</td>\n",
+       "      <td>175</td>\n",
+       "      <td>143</td>\n",
+       "      <td>136</td>\n",
+       "      <td>295</td>\n",
+       "      <td>207</td>\n",
+       "      <td>345</td>\n",
+       "      <td>200</td>\n",
+       "      <td>320</td>\n",
+       "      <td>234</td>\n",
+       "      <td>314</td>\n",
+       "      <td>261</td>\n",
+       "      <td>351</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>605</th>\n",
+       "      <td>20130530_04_Driv_090_f</td>\n",
+       "      <td>4</td>\n",
+       "      <td>90</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>266</td>\n",
+       "      <td>170</td>\n",
+       "      <td>141</td>\n",
+       "      <td>139</td>\n",
+       "      <td>303</td>\n",
+       "      <td>206</td>\n",
+       "      <td>354</td>\n",
+       "      <td>198</td>\n",
+       "      <td>331</td>\n",
+       "      <td>229</td>\n",
+       "      <td>319</td>\n",
+       "      <td>255</td>\n",
+       "      <td>362</td>\n",
+       "      <td>247</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>606 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    fileName  subject  imgNum  label  ang   xF   yF   wF   hF  \\\n",
+       "0    20130529_01_Driv_001_f         1       1      2    0  292  209  100  112   \n",
+       "1    20130529_01_Driv_002_f         1       2      2    0  286  200  109  128   \n",
+       "2    20130529_01_Driv_003_f         1       3      2    0  290  204  105  121   \n",
+       "3    20130529_01_Driv_004_f         1       4      2    0  287  202  112  118   \n",
+       "4    20130529_01_Driv_005_f         1       5      2    0  290  193  104  119   \n",
+       "..                       ...      ...     ...    ...  ...  ...  ...  ...  ...   \n",
+       "601  20130530_04_Driv_086_f         4      86      2  -15  278  183  128  141   \n",
+       "602  20130530_04_Driv_087_lr        4      87      1  -30  268  186  128  134   \n",
+       "603  20130530_04_Driv_088_lr        4      88      1  -30  264  187  127  131   \n",
+       "604  20130530_04_Driv_089_f         4      89      2  -15  264  175  143  136   \n",
+       "605  20130530_04_Driv_090_f         4      90      2    0  266  170  141  139   \n",
+       "\n",
+       "     xRE  yRE  xLE  yLE   xN   yN  xRM  yRM  xLM  yLM  \n",
+       "0    323  232  367  231  353  254  332  278  361  278  \n",
+       "1    324  235  366  235  353  258  333  281  361  281  \n",
+       "2    325  240  367  239  351  260  334  282  362  282  \n",
+       "3    325  230  369  230  353  253  335  274  362  275  \n",
+       "4    325  224  366  225  353  244  333  268  363  268  \n",
+       "..   ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  \n",
+       "601  307  218  354  210  330  247  324  273  356  266  \n",
+       "602  296  222  344  212  319  247  316  274  347  269  \n",
+       "603  287  220  334  211  304  247  305  272  337  270  \n",
+       "604  295  207  345  200  320  234  314  261  351  251  \n",
+       "605  303  206  354  198  331  229  319  255  362  247  \n",
+       "\n",
+       "[606 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('drivPoints.txt')"
+    "df = pd.read_csv('drivPoints.txt')\n",
+    "df"
    ]
   },
   {
@@ -250,7 +576,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def calculate_d(x,v, c, n):\n",
+    "    d=[]\n",
+    "    for i in range(c):\n",
+    "        d.append([])\n",
+    "        for k in range(n):           \n",
+    "            d[i].append(np.linalg.norm(abs(np.subtract(x[k],v[i]))))\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +602,7 @@
        " [1.0901470382421128, 2.5769297531858357]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +621,41 @@
     "    [0.6, 0.3, 0.8],\n",
     "    [0.4,0.7,0.2]\n",
     "]\n",
-    "generate_vt(u0,x,c,n,p)"
+    "v=generate_vt(u0,x,c,n,p)\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v=[\n",
+    "    [2.43, 2.08],\n",
+    "    [.94, 2.71]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2.4313165157996193, 1.7003823099526765, 1.5720368952413297],\n",
+       " [1.1780067911519017, 0.296141857899217, 3.141289544120376]]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_d(x,v,c,n)"
    ]
   },
   {
@@ -287,7 +663,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_u(d, m, c, n):\n",
+    "    u=[]\n",
+    "    for i in range(c):\n",
+    "        u.append([])\n",
+    "        for k in range(n):\n",
+    "            u_sum=0\n",
+    "            different=False\n",
+    "            for s in range(c):\n",
+    "                if d[s][k]==0:\n",
+    "                    different=True\n",
+    "                    break\n",
+    "                u_sum+=(d[i][k]/d[s][k])**(2/(m-1))\n",
+    "            if not different:\n",
+    "                u[i].append(1/u_sum)\n",
+    "            else:\n",
+    "                \n",
+    "                    \n",
+    "                    \n",
+    "                    \n",
+    "                u_sum+=(d[i][k]/d[s][k])**(2/(m-1))\n",
+    "            u[i].append(sum((d[i][k]/d[s][k])))\n",
+    "    return u0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delta_u()"
+   ]
   }
  ],
  "metadata": {
