--- a/fuzzy.ipynb
+++ b/fuzzy.ipynb
@@ -560,11 +560,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_vt(u, x, c, n,p,m=1.2):\n",
+    "def generate_vt(u, x, c, n,p,m=2):\n",
     "    v=[]\n",
     "    for i in range(c):\n",
     "        v.append([])\n",
@@ -592,17 +592,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[2.1367204728859424, 2.152858300414527],\n",
-       " [1.0901470382421128, 2.5769297531858357]]"
+       "[[2.431192660550459, 2.0825688073394497],\n",
+       " [0.9420289855072463, 2.710144927536232]]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,17 @@
     "                    \n",
     "                    \n",
     "                    \n",
-    "    return u0"
+    "    return u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delta_u(u1, u2, c, n):\n",
+    "    return sum(sum(np.linalg.norm(np.subtract(u2[i][k], u1[i][k])) for k in range(n)) for i in range(c))"
    ]
   },
   {
@@ -692,7 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def delta_u()"
+    "delta_u(u0, [[0.19, 0.3, 0.8], []])"
    ]
   }
  ],
